# priority-maneuver-coordination

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  maneuver_coordination_main.py  pyproject.toml  run.py
docs/: architecture.md  coordination_flow.md  creating_new_scenarios.md  trajectory_planning.md
maneuver_coordination/: __init__.py  __main__.py  cli.py
maneuver_coordination/coordination/: __init__.py  behavior_planner.py  conflicts.py  constants.py  decision_logic.py  planner.py  trajectory_logic.py
maneuver_coordination/motion_planning/: __init__.py  a_star.py  cubic_spline_planner.py  hybrid_a_star.py  reeds_shepp_path_planning.py  rrt.py  rrt_1.py  rrt_reeds_shepp.py  rrt_reeds_shepp_demo.py
maneuver_coordination/scenarios/: __init__.py  cascading_coordination.py  coordination_2_vehicles.py  output.py  rejected_request_then_free_lane.py  three_vehicles_coordination.py  three_vehicles_coordination_4_messages.py
maneuver_coordination/simulation/: __init__.py  runner.py  visualization.py
maneuver_coordination/simulation/coordination/: __init__.py  coordination_flow.py  events.py  messages.py  roles.py
maneuver_coordination/simulation/core/: __init__.py  history.py  math_helpers.py  settings.py  types.py
maneuver_coordination/simulation/motion/: __init__.py  adaptation.py  controllers.py  dynamics.py  paths.py  reference.py  speed_profiles.py  (+1 more)
maneuver_coordination/vehicle/: __init__.py  model.py  plotters.py  plotting.py
tests/: test_behavior_planner.py  test_cli.py  test_smoke.py
(+6 files in other folders)
